Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberTextObj.quorum
Text t
t:SetValue("7.5")
number n = cast(number, t)
output n