Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjNumber.quorum
Text t = cast(Text, 7.5)